# ChangeLog for virtual/xmwde
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*xmwde-0_p20110819 (19 Aug 2011)

  19 Aug 2011; Michael Weber <xmw@gentoo.org> -xmwde-0_p20110816.ebuild,
  +xmwde-0_p20110819.ebuild:
  removed gnome-terminal

*xmwde-0_p20110816 (16 Aug 2011)

  16 Aug 2011; Michael Weber <xmw@gentoo.org> -xmwde-0_p20110714.ebuild,
  +xmwde-0_p20110816.ebuild:
  Added x11-misc/trayer-srg

*xmwde-0_p20110714 (14 Jul 2011)

  14 Jul 2011; Michael Weber <xmw@gentoo.org> -xmwde-0_p20110601.ebuild,
  -xmwde-0_p20110711.ebuild, -xmwde-0_p20110713.ebuild,
  +xmwde-0_p20110714.ebuild:
  version bump, added xdotool for windowbounce

*xmwde-0_p20110713 (13 Jul 2011)

  13 Jul 2011; Michael Weber <xmw@gentoo.org> +xmwde-0_p20110713.ebuild:
  version bump, added xclip for clip2goog

*xmwde-0_p20110711 (11 Jul 2011)

  11 Jul 2011; Michael Weber <xmw@gentoo.org> +xmwde-0_p20110711.ebuild:
  Added app-misc/hddled

*xmwde-0_p20110601 (01 Jun 2011)

  01 Jun 2011; Michael Weber <xmw@gentoo.org> -xmwde-0_p20110511.ebuild,
  +xmwde-0_p20110601.ebuild:
  Version bump, including x11-misc/wmname

*xmwde-0_p20110511 (11 May 2011)

  11 May 2011; Michael Weber <xmw@gentoo.org> -xmwde-0_p20110510.ebuild,
  +xmwde-0_p20110511.ebuild:
  added alock

  09 May 2011; Michael Weber <xmw@gentoo.org> xmwde-0_p20110510.ebuild:
  Added x11 tools

*xmwde-0_p20110510 (09 May 2011)

  09 May 2011; Michael Weber <xmw@gentoo.org> -xmwde-0_p20110502.ebuild,
  +xmwde-0_p20110510.ebuild:
  Added gnome-base/gnome-keyring

*xmwde-0_p20110502 (02 May 2011)

  02 May 2011; Michael Weber <xmw@gentoo.org> +xmwde-0_p20110502.ebuild,
  +metadata.xml:
  Initial import
