@@ -1,13 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD xmwde-0_p20110819.ebuild 881 RMD160 43bd3e77270336e2f4f8c346bece0e1fa3c31678 SHA1 ce90d4dd192f351d4adfcf36e408538acb45c680 SHA256 44fd0ab20ef9dcd2ae091c0775fd4aba933cfd09e65125f42f08fb623a86ec0b
-MISC ChangeLog 1696 RMD160 fa8e75caf7296928aa1721930638bcfa684551bf SHA1 ca481cf6aae0f4cc2aea08903f11b78ec53d93f6 SHA256 22f6ea023ce5042233790761c1b94e21dab810794608cdc373b3b8d4961885ab
+EBUILD xmwde-0_p20120214.ebuild 891 RMD160 2a7d4ae53029237f44b833d21d7eee0747605d9e SHA1 26173ca42b54a0b416d87f5bf4391117318c2d2e SHA256 b4e3633503691f75b877f8f8afcf642604ab1a38fbc91d58798305d7992a09ff
+MISC ChangeLog 1873 RMD160 031d99ccc99383f346e1eee7ef79f9ba2f28ea26 SHA1 7f0dddb42584b5bf317f6a06ce3de1937f3eeccb SHA256 682f64b9f1b8d25ae6d3b02a98bd36b26fa958186f64915a2c649650862e2b31
 MISC metadata.xml 245 RMD160 6b03982a4d5f32d9fa6b9259ae36f9fcb07c8404 SHA1 fb16c7b4c5ab071dd979f761b8bb075f5396b737 SHA256 375a1da02cd2c393ce2378a73c1ce08134bc030b3bb378c6a4d6ca9cd5be1f8d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk5ODh4ACgkQknrdDGLu8JDEkAEAlGRAsgitpdg3/NeX2gJSle1L
-KzP/Zvb7LdZyACjWinMA/2BdZXS6Axa5tF8fLL8c0nsKsaxUP2l+Bb0gfXIlgtVP
-=ZY1j
+iF4EAREIAAYFAk85rLwACgkQknrdDGLu8JDcYgD+NrnroYriS/EKHhPSQ8IgOrUJ
+PcLlP40S/cQ837EMAFYBAIilSQEJ+FiP52h57V7UzFir6BOvd3cP6O6LTMiHR+Y8
+=b3VY
 -----END PGP SIGNATURE-----
